fix(navigation): increase z-index to fix wrong display on empty pages

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -304,6 +304,7 @@
   --header-social-logo-height-mobile:var(--footer-social-logo-height-mobile);
   --header-social-logo-img-margin:0;
   --header-transition:none;
+  --header-z-index:200;
   --highlightbox-align-items:center;
   --highlightbox-background:var(--wrapper-background-secondary-color);
   --highlightbox-display:flex;
